--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -284,7 +284,8 @@
                                 <table cellpadding="0" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Camera</th>
+                                            <th>Camera ID</th>
+                                            <th>Camera Name</th>
                                             <th>Last Detected</th>
                                         </tr>
                                     </thead>
