detections are now fetching data from DB properly

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -284,9 +284,11 @@
                                 <table cellpadding="0" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Camera ID</th>
+                                            <th>Detection ID</th>
                                             <th>Camera Name</th>
-                                            <th>Last Detected</th>
+                                            <th>Description</th>
+                                            <th>Detection Time</th>
+                                            <th>Detection Date</th>
                                         </tr>
                                     </thead>
                                 </table>
