ready to deploy

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -521,6 +521,7 @@
     <script src="../Scripts/dashboard.js"></script>
     <script src="../Scripts/main.js"></script>
     <script src="../Scripts/generalSettings.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
 </body>
 
