--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -364,6 +364,7 @@
                                             <th>Camera Name</th>
                                             <th>Last Detected</th>
                                             <th>Current Status</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                 </table>
