--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SafeForest</title>
+    <link rel="icon" href="../Images/safe-forest.png">
     <link rel="stylesheet" href="../Styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
