--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -493,77 +493,43 @@
                             <h1>All Alert Contacts</h1>
                         </div>
                         <div class="panel-show-contacts-searchbar">
-                            <input id="searchInput" onkeyup="searchTable('searchInput', 'searchDashboard')"
-                                type="text" name="account-search" placeholder="Search account">
+                            <input id="searchInputMyAccounts"
+                                onkeyup="searchTable('searchInputMyAccounts', 'searchMyAccounts')" type="text"
+                                name="account-search" placeholder="Search account">
                         </div>
                     </div>
                     <div class="panel-show-contacts-table">
-                        <div class="tbl-header"> <!-- Start Table Here -->
+                        <div class="tbl-header">
                             <table cellpadding="0" cellspacing="0">
                                 <thead>
                                     <tr>
-                                        <th>Account</th>
-                                        <th>Alert Sent</th>
+                                        <th>Accounts</th>
                                     </tr>
                                 </thead>
                             </table>
                         </div>
-                        <div class="tbl-content">
+                        <div class="tbl-content" id="searchMyAccounts">
                             <table cellpadding="0" cellspacing="0">
                                 <tbody>
-                                    <!-- Paste your data here -->
                                     <tr>
-                                        <td><a href="#">CamX-2000</a></td>
-                                        <td>2024-04-15 08:45:12</td>
+                                        <td><a href="#">joao@gmail.com</a></td>
+                                        <td><button class="remove-button margin-right">Remove</button></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="#">CamX-3000</a></td>
-                                        <td>2024-04-16 14:22:55</td>
+                                        <td><a href="#">goncalo@gmail.com</a></td>
+                                        <td><button class="remove-button margin-right">Remove</button></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="#">CamX-1000</a></td>
-                                        <td>2024-04-17 10:11:36</td>
+                                        <td><a href="#">duarte@gmail.com</a></td>
+                                        <td><button class="remove-button margin-right">Remove</button></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="#">CamX-4000</a></td>
-                                        <td>2024-04-18 09:30:48</td>
+                                        <td><a href="#">calisto@gmail.com</a></td>
+                                        <td><button class="remove-button margin-right">Remove</button></td>
                                     </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-5000</a></td>
-                                        <td>2024-04-18 15:55:21</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-6000</a></td>
-                                        <td>2024-04-19 11:20:33</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-7000</a></td>
-                                        <td>2024-04-20 16:44:45</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-8000</a></td>
-                                        <td>2024-04-21 08:15:57</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-9000</a></td>
-                                        <td>2024-04-22 13:38:09</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-10000</a></td>
-                                        <td>2024-04-23 10:09:21</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-11000</a></td>
-                                        <td>2024-04-24 15:32:33</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#">CamX-12000</a></td>
-                                        <td>2024-04-25 12:03:45</td>
-                                    </tr>
-                                    <!-- Repeat this pattern for all rows of your data -->
                                 </tbody>
                             </table>
-                        </div> <!-- End Table Here -->
+                        </div>
                     </div>
                 </div>
             </div>
