--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <title>SafeForest</title>
     <link rel="icon" href="../Images/safe-forest.png">
     <link rel="stylesheet" href="../Styles/main.css">
@@ -19,7 +20,7 @@
                 <div class="logo-nav-logo">
                 </div>
                 <div class="logo-nav-hamburguer">
-                    <button type="button" id="logo-nav-hamburger-btn" onclick="clicked_menu()"></button>
+                    <button type="button" id="logo-nav-hamburger-btn" onclick=""></button>
                 </div>
             </div>
 
@@ -213,11 +214,6 @@
                                     <div class="panel-information-statistics-status-online-container-label">
                                         <p>Cameras Online</p>
                                     </div>
-                                    <div class="panel-information-statistics-status-online-container-cameras">
-                                        <button type="button"
-                                            class="panel-information-statistics-status-online-container-cameras-btn">My
-                                            Cameras ></button>
-                                    </div>
                                 </div>
                             </div>
                             <div class="panel-information-statistics-status-offline">
@@ -227,11 +223,6 @@
                                     </div>
                                     <div class="panel-information-statistics-status-offline-container-label">
                                         <p>Cameras Offline</p>
-                                    </div>
-                                    <div class="panel-information-statistics-status-offline-container-cameras">
-                                        <button type="button"
-                                            class="panel-information-statistics-status-offline-container-cameras-btn">My
-                                            Cameras ></button>
                                     </div>
                                 </div>
                             </div>
