--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -300,7 +300,7 @@
                                 <h1>My Cameras</h1>
                             </div>
                             <div class="panel-camera-container-top-search">
-                                <input id="searchInput" onkeyup="searchTable('searchInput', 'searchDashboard')"
+                                <input class="panel-camera-search" id="searchInput" onkeyup="searchTable('searchInput', 'searchDashboard')"
                                     type="text" name="camera-search" placeholder="Search camera">
                             </div>
                         </div>
@@ -338,9 +338,9 @@
                                 <h1>My Cameras</h1>
                             </div>
                             <div class="panel-camera-container-top-search">
-                                <input type="text" id="searchInputMyCameras"
+                                <input class="panel-camera-search" type="text" id="searchInputMyCameras"
                                     onkeyup="searchTable('searchInputMyCameras', 'searchMyCameras')"
-                                    name="camera-search" placeholder="Search camera">
+                                    name="camera-search" placeholder="Search">
                             </div>
                         </div>
                         <div class="panel-mycamera-container-table">
@@ -487,7 +487,7 @@
                             <h1>All Alert Contacts</h1>
                         </div>
                         <div class="panel-show-contacts-searchbar">
-                            <input id="searchInputMyAccounts"
+                            <input class="panel-account-search" id="searchInputMyAccounts"
                                 onkeyup="searchTable('searchInputMyAccounts', 'searchMyAccounts')" type="text"
                                 name="account-search" placeholder="Search account">
                         </div>
